[tool.poetry]
name = "olinda"
version = "0.1.0"
description = "A model distillation library"
authors = ["Ersilia Open Source Initiative <hello@ersilia.io>","Ankur Kumar <ank@leoank.me>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.10"
torch = "^1.12.1"
pytorch-lightning = "^1.7.2"
onnx = "^1.12.0"
onnx-tf = "^1.10.0"
webdataset = "^0.2.18"
gin-config = "^0.5.0"
click = "^8.1.3"
pydantic = "^1.9.2"
xdg = "^5.1.1"
joblib = "^1.1.0"
cbor2 = "^5.4.3"
#pandas = "^1.4.4"
cbor = "^1.0.0"
numpy = "^1.23.4"
lap = { git = "https://github.com/gatagat/lap.git", branch = "new-packaging" }
griddify = "^0.0.1"
rdkit = { version = "^2022.3.5", markers = "sys_platform != 'darwin' or  platform_machine != 'arm64'" }
rdkit-pypi = { version = "^2022.3.5", markers = "sys_platform == 'darwin' and platform_machine == 'arm64'" }
tensorflow = { version = "^2.9, <2.16.0", markers = "sys_platform != 'darwin' or platform_machine != 'arm64'" }
tensorflow-macos = { version = "^2.9", markers = "sys_platform == 'darwin' and platform_machine == 'arm64'" }
tensorflow-metal = { version = "^0.5.0", markers = "sys_platform == 'darwin' and platform_machine == 'arm64'" }
keras-tuner = "^1.1.3"
autokeras = "^1.0.20"
ersilia = "^0.1.31"
tf2onnx
onnxruntime


[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^5.0.4"
black = "^22.6.0"
darglint = "^1.8.1"

[tool.poetry.scripts]
olinda = "olinda.cli.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
