[tool.poetry]
name = "olinda"
version = "0.2.0"
description = "A model distillation library"
authors = ["Ersilia Open Source Initiative <hello@ersilia.io>"]

[tool.poetry.dependencies]
python = ">=3.8"
torch = "^1.12.1"
pytorch-lightning = "^1.7.2"
onnx = "^1.12.0"
onnx-tf = "^1.10.0"
webdataset = "^0.2.18"
gin-config = "^0.5.0"
click = "^8.1.3"
pydantic = "^1.9.2"
xdg = "^5.1.1"
joblib = "^1.1.0"
cbor2 = "^5.4.3"
pandas = ">=1.3.5"
cbor = "^1.0.0"
numpy = "^1.23.4"
lapx = "0.5.5"
griddify = "0.0.2"
rdkit = "^2022.3.5"
tensorflow = "2.15.0"
keras = "2.15.0"
keras-nlp = "0.12.0"
keras-tuner = "^1.1.3"
autokeras = "^1.0.20"
ersilia = "0.1.34"
tf2onnx = ">=1.16.1"
onnxruntime = ">=1.17.3"
boto = ">=1.34.150"
botocore = ">=1.34.150"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^5.0.4"
black = "^22.6.0"
darglint = "^1.8.1"

[tool.poetry.scripts]
olinda = "olinda.cli.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
